# CitrineCLI

./: .citrine  .gitignore  Cargo.toml  README.md  citrine  go.mod  main.go
.github/workflows/: rust.yml
cli/: cli.go
scripts/: list-with-tag.sh  show-completed.sh  show-due-today.sh  sort-by-priority.sh
src/: main.rs  storage.rs  task.rs
utils/: utils.go
