[package]
name = "citrine-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.13", features = ["derive"] }

[target.x86_64-pc-windows-gnu]                                                                             
linker = "x86_64-w64-mingw32-gcc"